responsive header first try

--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
                 <!--NAVIGATION-->
         <nav>      
             <div class="logo">
-                <img  src="images/logo/Booki.png" alt="logo de Booki" /> 
+                <img  src="images/logo/Booki@3x.png" alt="logo de Booki" /> 
             </div>                   
 
             <ul class="menu">
-                <li><a href="#hebergements_lien">Hébergements</a></li>
-                <li><a href="#activites_lien">Activités</a></li>
+                <li><div class="lien1"><a href="#hebergements_lien">Hébergements</a></div></li>
+                <li><div class="lien2"><a href="#activites_lien">Activités</a></div></li>
             </ul>
         </nav>
         
@@ -53,10 +53,10 @@
 
                  <!--searchbar-->
         <div class="searchbar">
-            <div class="localisation">
-                <div class="mapmarked"><span class="fas fa-map-marker-alt"></span></div>
-            </div>
             <form method="post" action="traitement.php">
+                <div class="localisation">
+                    <div class="mapmarked"><span class="fas fa-map-marker-alt"></span></div>
+                </div>
                 <div class="right">
                     <p><input type="search" name="search" class="champ" placeholder="Rechercher..."/></p>
                     <input class="button" type="button" value="Rechercher"/>
