--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             </div>                   
 
             <ul class="menu">
-                <li><div class="lien1"><a href="#hebergements_lien">Hébergements</a></div></li>
-                <li><div class="lien2"><a href="#activites_lien">Activités</a></div></li>
+                <li><a href="#hebergements_lien">Hébergements</a></li>
+                <li><a href="#activites_lien">Activités</a></li>
             </ul>
         </nav>
         
