final responsive header + hergement regular&popular

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         <!--HEBERGEMENTS-REGULAR-->
         <div class="megabox_all_hebergements_regular"> 
             <a id="hebergements_lien"></a>    
-            <h2>Hébergements à Marseille</h2>
+            <div class="titre_megabox"> <h2> Hébergements à Marseille </h2> </div>
 
             <div class="box_cartes">
                 <a href="#">
@@ -269,7 +269,7 @@
     
         <div class="megabox_all_hebergements_popular">
             <div class="h2_pop">
-                <h2>Les plus populaires</h2>
+                <div class="titre_megabox"> <h2> Les plus populaires </h2> </div>
                 <div class="icon_increase"><span class="fas fa-chart-line"></span></div>
             </div>
             <div class="box_cartes_pop">
