--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
             </div>
 
             <div class="box_cartes">
-                <a href="#">
+                <a class="lien-regular" href="#">
                     <div class="box_hebergement_regular">
                         <div class="contenu_carte">
                             <div class="box_photo">
