full version finished

--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
         </div>
         <p>Plus de 500 logements sont disponibles dans cette ville</p>
     </div>
+    <a id="hebergements_lien"></a>
 
 
     <!--||||||||||||||||||||||-->
@@ -131,7 +132,6 @@
 
         <!--HEBERGEMENTS-REGULAR-->
         <div class="mega_box_regular">
-            <a id="hebergements_lien"></a>
             <div class="h2_reg">
                 <h2 class="titre_megabox"> Hébergements à Marseille </h2>
             </div>
@@ -148,7 +148,7 @@
                                 <div class="star_blue"><span class="fas fa-star"></span></div>
                                 <div class="star_blue"><span class="fas fa-star"></span></div>
                                 <div class="star_blue"><span class="fas fa-star"></span></div>
-                                <div class="star_blue"><span class="fas fa-star"></span></div>
+                                <div class="star_grey"><span class="fas fa-star"></span></div>
                             </div>
                         </div>
                     </a>
@@ -184,7 +184,7 @@
                                 <div class="star_blue"><span class="fas fa-star"></span></div>
                                 <div class="star_blue"><span class="fas fa-star"></span></div>
                                 <div class="star_blue"><span class="fas fa-star"></span></div>
-                                <div class="star_blue"><span class="fas fa-star"></span></div>
+                                <div class="star_grey"><span class="fas fa-star"></span></div>
                             </div>
                         </div>
                     </a>
@@ -201,8 +201,8 @@
                                 <div class="star_blue"><span class="fas fa-star"></span></div>
                                 <div class="star_blue"><span class="fas fa-star"></span></div>
                                 <div class="star_blue"><span class="fas fa-star"></span></div>
-                                <div class="star_blue"><span class="fas fa-star"></span></div>
-                                <div class="star_blue"><span class="fas fa-star"></span></div>
+                                <div class="star_grey"><span class="fas fa-star"></span></div>
+                                <div class="star_grey"><span class="fas fa-star"></span></div>
                             </div>
                         </div>
                     </a>
@@ -220,7 +220,7 @@
                                 <div class="star_blue"><span class="fas fa-star"></span></div>
                                 <div class="star_blue"><span class="fas fa-star"></span></div>
                                 <div class="star_blue"><span class="fas fa-star"></span></div>
-                                <div class="star_blue"><span class="fas fa-star"></span></div>
+                                <div class="star_grey"><span class="fas fa-star"></span></div>
                             </div>
                         </div>
                     </a>
@@ -247,11 +247,7 @@
             <p class="afficher_plus">Afficher plus</p>
         </div>
 
-        <!--||||||||||||||||||||-->
-        <!--HEBERGEMENTS-popular-->
-        <!--||||||||||||||||||||-->
-
-
+        <!--HEBERGEMENTS-POPULAR-->
         <div class="mega_box_popular">
             <div class="h2_pop">
                 <h2 class="titre_megabox"> Les plus populaires </h2>
@@ -288,7 +284,7 @@
                                 <div class="star_blue"><span class="fas fa-star"></span></div>
                                 <div class="star_blue"><span class="fas fa-star"></span></div>
                                 <div class="star_blue"><span class="fas fa-star"></span></div>
-                                <div class="star_blue"><span class="fas fa-star"></span></div>
+                                <div class="star_grey"><span class="fas fa-star"></span></div>
                             </div>
                         </div>
                     </a>
@@ -306,7 +302,7 @@
                                 <div class="star_blue"><span class="fas fa-star"></span></div>
                                 <div class="star_blue"><span class="fas fa-star"></span></div>
                                 <div class="star_blue"><span class="fas fa-star"></span></div>
-                                <div class="star_blue"><span class="fas fa-star"></span></div>
+                                <div class="star_grey"><span class="fas fa-star"></span></div>
                             </div>
                         </div>
                     </a>
@@ -316,45 +312,39 @@
         </div>
     </section>
 
-
-
-
-
-
-
-
     <!--ACTIVITÉS-->
     <section class="activities">
         <a id="activites_lien"></a>
         <h2 class="titre_activite">Activités à Marseilles</h2>
 
         <div class="megabox_all_activities">
-            <!--l'ensemble des box-->
 
             <div class="column_activity">
-                <div class="box_activity1">
-                    <a class="link_activity1" href="#">
+                <div class="box_activity">
+                    <a class="link_activity" href="#">
                         <img src="images/activites/3_medium/vieux_port.jpg" alt="photo activité"
-                            class="photo_activity1" />
+                            class="photo_activity" />
                         <p class="name_activity">Vieux Port</p>
                     </a>
                 </div>
             </div>
 
 
+
             <div class="column_activity">
-                <div class="box_activity2">
-                    <a class="link_activity2" href="#">
+                <div class="box_activity">
+                    <a class="link_activity" href="#">
                         <img src="images/activites/3_medium/fort_de_pomègues.jpg" alt="photo activité"
-                            class="photo_activity2" />
+                            class="photo_activity" />
                         <p class="name_activity">Fort de Pomègues</p>
                     </a>
                 </div>
 
-                <div class="box_activity3">
-                    <a class="link_activity3" href="#">
+
+                <div class="box_activity">
+                    <a class="link_activity" href="#">
                         <img src="images/activites/3_medium/iles_du_frioul.jpg" alt="photo activité"
-                            class="photo_activity3" />
+                            class="photo_activity" />
                         <p class="name_activity">Îles du Frioul</p>
                     </a>
                 </div>
@@ -362,33 +352,35 @@
 
 
             <div class="column_activity">
-                <div class="box_activity4">
-                    <a class="link_activity4" href="#">
+                <div class="box_activity">
+                    <a class="link_activity" href="#">
                         <img src="images/activites/3_medium/parc_national.jpg" alt="photo activité"
-                            class="photo_activity4" />
+                            class="photo_activity" />
                         <p class="name_activity">Parc National des Calanques</p>
                     </a>
                 </div>
             </div>
 
 
+
             <div class="column_activity">
-                <div class="box_activity5">
-                    <a class="link_activity5" href="#">
+                <div class="box_activity">
+                    <a class="link_activity" href="#">
                         <img src="images/activites/3_medium/notre_dame.jpg" alt="photo activité"
-                            class="photo_activity5" />
+                            class="photo_activity" />
                         <p class="name_activity">Notre-Dame-De-La-Garde</p>
                     </a>
                 </div>
 
-                <div class="box_activity6">
-                    <a class="link_activity6" href="#">
+                <div class="box_activity">
+                    <a class="link_activity" href="#">
                         <img src="images/activites/3_medium/parc_longchamp.jpg" alt="photo activité"
-                            class="photo_activity6" />
+                            class="photo_activity" />
                         <p class="name_activity">Parc Longchamp</p>
                     </a>
                 </div>
             </div>
+
 
         </div>
     </section>
