--- a/index.html
+++ b/index.html
@@ -9,35 +9,15 @@
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap">
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css">
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
-
-
-
-
-<!--SOMMAIRE-->
-
-
-<!--NAVIGATION-->
-<!--searchbar-->
-<!--FILTRES-->
-<!--INFO-->
-<!--HEBERGEMENTS-REGULAR-->
-<!--HEBERGEMENTS-POPULAR-->
-<!--ACTIVITÉS-->
-<!--FOOTER-->
 
 <body>
 
 
-    <!--||||||||||||||||-->
     <!--|||| HEADER ||||-->
-    <!--||||||||||||||||-->
     <header>
-
-
-
         <!--NAVIGATION-->
         <nav>
             <div class="logo">
@@ -58,23 +38,18 @@
                 <div class="localisation">
                     <div class="mapmarked"><span class="fas fa-map-marker-alt"></span></div>
                 </div>
-                <p class="champ_mom"><input type="search" name="search" class="champ" placeholder="Rechercher..." /></p>
+                <p class="champ_mom"><input type="text" name="search" class="champ" placeholder="Rechercher..." /></p>
                 <div class="right">
                     <button type="button" class="btn_desktop">Rechercher</button>
                     <button type="button" class="btn_mobile"><span class="fas fa-search"></span></button>
                 </div>
             </form>
         </div>
-
-
     </header>
 
-
     <!--FILTRES-->
-    <div class="filters">
-
+    <section class="filters">
         <h2>Filtres</h2>
-
         <div class="bodyfilter">
             <div class="iconcercle">
                 <div>
@@ -110,8 +85,7 @@
             </div>
             <p>Animaux autorisés</p>
         </div>
-    </div>
-
+    </section>
 
     <!--INFO-->
     <div class="info">
@@ -124,12 +98,8 @@
     </div>
     <a id="hebergements_lien"></a>
 
-
-    <!--||||||||||||||||||||||-->
     <!--|||| HÉBERGEMENTS ||||-->
-    <!--||||||||||||||||||||||-->
     <section class="hebergements">
-
         <!--HEBERGEMENTS-REGULAR-->
         <div class="mega_box_regular">
             <div class="h2_reg">
@@ -307,7 +277,6 @@
                         </div>
                     </a>
                 </div>
-
             </div>
         </div>
     </section>
@@ -316,9 +285,7 @@
     <section class="activities">
         <a id="activites_lien"></a>
         <h2 class="titre_activite">Activités à Marseilles</h2>
-
         <div class="megabox_all_activities">
-
             <div class="column_activity">
                 <div class="box_activity">
                     <a class="link_activity" href="#">
@@ -329,8 +296,6 @@
                 </div>
             </div>
 
-
-
             <div class="column_activity">
                 <div class="box_activity">
                     <a class="link_activity" href="#">
@@ -339,7 +304,6 @@
                         <p class="name_activity">Fort de Pomègues</p>
                     </a>
                 </div>
-
 
                 <div class="box_activity">
                     <a class="link_activity" href="#">
@@ -350,7 +314,6 @@
                 </div>
             </div>
 
-
             <div class="column_activity">
                 <div class="box_activity">
                     <a class="link_activity" href="#">
@@ -360,8 +323,6 @@
                     </a>
                 </div>
             </div>
-
-
 
             <div class="column_activity">
                 <div class="box_activity">
@@ -380,36 +341,50 @@
                     </a>
                 </div>
             </div>
-
-
         </div>
     </section>
 
     <!--FOOTER-->
     <footer>
-        <div class="infos_footer_parent">
-            <div class="infos_footer">
+        <ul>
+            <li>
                 <h2>A propos</h2>
+            </li>
+            <li>
                 <p>Fonctionnement du site</p>
+            </li>
+            <li>
                 <p>Conditions générales de vente</p>
+            </li>
+            <li>
                 <p>Données et confclassentialité</p>
-            </div>
+            </li>
+        </ul>
 
-            <div class="infos_footer">
+        <ul>
+            <li>
                 <h2>Nos hébergements</h2>
+            </li>
+            <li>
                 <p>Charte qualité</p>
+            </li>
+            <li>
                 <p>Soumettre votre hôtel</p>
-            </div>
+            </li>
+        </ul>
 
-            <div class="infos_footer">
+        <ul>
+            <li>
                 <h2>Assistance</h2>
+            </li>
+            <li>
                 <p>Centre d'aclasse</p>
+            </li>
+            <li>
                 <p>Nous contacter</p>
-            </div>
-        </div>
+            </li>
+        </ul>
     </footer>
-
-
 </body>
 
 </html>
